--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
@@ -3,8 +3,8 @@
     <h3><div>社区人口</div></h3>
     <div class="divcont">
         <ul class="sqrk-ul flex" id="society-person">
-            <li class="sqrk-li flexgrow1">
-              <div style="font-size:.5rem; color:#1a8fef">海洋小区</div>
+            <li class="sqrk-li flexgrow1" style="width:4.5em; font-size:.4rem; color:#1a8fef; line-height:1.8em;">
+              <div >海洋小区</div>
             </li>
             <li class="sqrk-li flexgrow1">
                 <div class="item-l"><img src="Content/images/sqrk_icon1.png"/></div>
