--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
@@ -2,38 +2,15 @@
 <div  id="right02_01" class="divbox divbox-rr clearfix society-rs1" style="z-index:999;display:block;">
     <h3><div>事件信息</div></h3>
     <div class="divcont divcont-sj">
-        <!--<ul class="sj-list flex">
-            <li class="sj-li">
-                <div class="sj-div"></div>
-                <div class="sj-title"><div>累计节省时间</div><span>（案件数量*节省分钟数）</span></div>
-                <div class="sj-data testAerial" id="sj-saveTime">2160*35′</div>
-            </li>
-            <li class="sj-li">
-                <div class="sj-div"></div>
-                <div class="sj-title">智能发现事件数量累计</div>
-                <div class="sj-data testAerial" id="sj-eventCounts">2160</div>
-            </li>
-            <li class="sj-li">
-                <div class="sj-div"></div>
-                <div class="sj-title">智能发现自动化率</div>
-                <div class="sj-data testAerial" id="sj-autoRate">35%</div>
-            </li>
-            <li class="sj-li">
-                <div class="sj-div"></div>
-                <div class="sj-title">智能派单准确率超过</div>
-                <div class="sj-data testAerial" id="sj-accuracyRate">80%</div>
-            </li>
-        </ul>-->
-
-        <ul class="sj-list flex">
+        <ul class="sj-list sj-list1 flex">
           <li class="sj-li flexgrow1">
             <div class="sj-div"></div>
             <div class="sj-title">
               <div>主动发现事件个数</div>
-              <span class="sj-data testAerial">43536</span>
+              <span class="sj-data testAerial">43212</span>
             </div>
           </li>
-          <li class="sj-li flexgrow1">
+          <li class="sj-li flexgrow1" style="margin-right:-.3rem;">
             <div class="sj-div"></div>
             <div class="sj-title">
               <div>主动发现率</div>
@@ -48,15 +25,15 @@
             </div>
           </li>
         </ul>
-        <ul class="sj-list flex">
+        <ul class="sj-list sj-list2  flex">
           <li class="sj-li flexgrow1">
             <div class="sj-div"></div>
             <div class="sj-title">
               <div>智能派单事件个数</div>
-              <span class="sj-data testAerial">43536</span>
+              <span class="sj-data testAerial">23454</span>
             </div>
           </li>
-          <li class="sj-li flexgrow1">
+          <li class="sj-li flexgrow1" style="margin-right:-.3rem;">
             <div class="sj-div"></div>
             <div class="sj-title">
               <div>智能派单率</div>
