事件信息更新

--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
@@ -2,7 +2,7 @@
 <div  id="right02_01" class="divbox divbox-rr clearfix society-rs1" style="z-index:999;display:block;">
     <h3><div>事件信息</div></h3>
     <div class="divcont divcont-sj">
-        <ul class="sj-list sj-list1 flex">
+        <ul class="sj-list sj-list1 flex" id="sj-list1">
           <li class="sj-li flexgrow1">
             <div class="sj-div"></div>
             <div class="sj-title">
@@ -25,7 +25,7 @@
             </div>
           </li>
         </ul>
-        <ul class="sj-list sj-list2  flex">
+        <ul class="sj-list sj-list2  flex" id="sj-list2">
           <li class="sj-li flexgrow1">
             <div class="sj-div"></div>
             <div class="sj-title">
