modify event 's code for loopallevent detail.

--- a/Lingang.City.Brain/View/SocietyNew/Bottom_Menu.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_Menu.html
@@ -1,8 +1,8 @@
 ﻿<ul class="flex">
-    <li class="">传感器</li>
+    <!--<li class="">传感器</li>
     <li class="">摄像头</li>
     <li class="">无人机</li>
-    <li class="">村居工作站</li>
+    <li class="">村居工作站</li>-->
     <li class="">海岸线</li>
     <li class="">工地</li>
     <li class="">街面</li>
