--- a/Lingang.City.Brain/View/TourNew/Left_Second_02.html
+++ b/Lingang.City.Brain/View/TourNew/Left_Second_02.html
@@ -4,29 +4,29 @@
     <div class="divcont wrj-l2  dkl-sxt">
         <ul class="flex"id="zxsxt" style=" padding .2rem 0;">
             <li class="wrj-l2-li wrj-l2-li1">
-                <button class=""><div class="testAerial">352</div><span>总数</span></button>
+                <button class=""><div class="testAerial" id="total">352</div><span>总数</span></button>
             </li>
             <li class="wrj-l2-li ">
                 <!-- 这里负的多少秒表示百分之多少  100% 需要设置 animation-delay: -99.999s 左右-->
 
-                <div class="piebox"><div class="pie testAerial" style="animation-delay: -20s" data-text="20%"></div></div>
+                <div class="piebox"><div class="pie testAerial" style="animation-delay: -18s" data-text="18%"></div></div>
                 <div class="piebox-right">
                     <span> 球机</span>
-                    <div><span class="testAerial">107</span>台</div>
+                    <div><span class="testAerial" id="ball">107</span>台</div>
                 </div>
             </li>
             <li class="wrj-l2-li ">
-                <div class="piebox"><div class="pie testAerial" style="animation-delay: -79s" data-text="79%"></div></div>
+                <div class="piebox"><div class="pie testAerial" style="animation-delay: -81s" data-text="81%"></div></div>
                 <div class="piebox-right">
                     <span> 枪机</span>
-                    <div><span class="testAerial">243</span>台</div>
+                    <div><span class="testAerial" id="gun">243</span>台</div>
                 </div>
             </li>
             <li class="wrj-l2-li ">
                 <div class="piebox"><div class="pie testAerial" style="animation-delay: -1s" data-text="1%"></div></div>
                 <div class="piebox-right">
                     <span> 鹰眼</span>
-                    <div><span class="testAerial">1</span>台</div>
+                    <div><span class="testAerial" id="eagle">1</span>台</div>
                 </div>
             </li>
         </ul>
