--- a/Lingang.City.Brain/View/TourNew/Right_First_01.html
+++ b/Lingang.City.Brain/View/TourNew/Right_First_01.html
@@ -4,7 +4,7 @@
     <div class="divcont">
         <div class="rycltj-tabbox flex">
             <button class="active" id="ry" onclick="require('t_Home').ryClickEvent('ry');">出入园人数统计</button>
-            <button class="" id="dt" onclick="require('t_Home').ryClickEvent('dt');">地铁人数统计</button>
+            <button class="" id="dtrs" onclick="require('t_Home').ryClickEvent('dtrs');">地铁人数统计</button>
             <button class="" id="jccl" onclick="require('t_Home').ryClickEvent('jccl');">进出临港车辆统计</button>
         </div>
         <!--<div class="jtxx-tabbox clearfix" id="rq">
