社综--事件列表更新

--- a/Lingang.City.Brain/View/SocietyNew/Center_04.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_04.html
@@ -10,19 +10,20 @@
   </div>
   <div class="center-event-itembox">
     <ul class="center-event-sociul scrolldiv" id="center-event-sociul" style="padding-right:.2rem;">
-      <!--<li class="center-event-li">
-        <div class="center-event-li-line1">
-          <span class="sjxx-id">1</span>
-          <span class="sjxx-event">智能井盖翻开</span>
-          <span class="fr sjxx-state">作废</span>
-        </div>
-        <div class="sjxx-address">
-          古棕路438弄57号西边-101号井
-          <span class="fr sjxx-time">
-            2019-06-25 07:48:27<span>李斌</span>
-          </span>
-        </div>
-      </li>-->
+        <!--<li class="sjxx-li active flex">
+          <span class="sjxx-id"></span>
+          <div class="sjxx-div">
+            <div class="sjxx-li-line1">
+              <span class="sjxx-event">无线门磁出现故障</span>
+              <span class="fr sjxx-state">已处理</span>
+              <span class="fr sjxx-economizetime">18天13小时</span>
+            </div>
+            <div class="sjxx-address">
+              上海市浦东新区临港大道×××号
+              <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
+            </div>
+          </div>
+        </li>-->
     </ul>
   </div>
 </div>
