--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
@@ -25,17 +25,22 @@
         </div>
         <div class="scrolldiv" id="right_EventList">
             <ul class="scrollitem" id="ul_eventlist">
-                <!--<li class="sjxx-li sjxx-li-new active">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">001</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colorred">待处理</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>-->
+              <!--<li class="sjxx-li active flex">
+                <span class="sjxx-id"></span>
+                <div class="sjxx-div">
+                  <div class="sjxx-li-line1">
+                    <span class="sjxx-event">无线门磁出现故障</span>
+                    <span class="fr sjxx-state">已处理</span>
+                    <span class="fr sjxx-economizetime">18天13小时</span>
+                  </div>
+                  <div class="sjxx-address">
+                    上海市浦东新区临港大道×××号
+                    <span class="fr sjxx-time">
+                      2019/02/06<span>张宇</span>
+                    </span>
+                  </div>
+                </div>
+              </li>-->
             </ul>
         </div>
     </div>
