--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -997,24 +997,29 @@ button.arrowbtn.btnright{
 	padding: .06rem  .1rem;
 	margin-top: .02rem;
 }
-.sjxx-li-line1{ 
+.sjxx-id{
+	float: left;
+	width: .6rem;
+	background: url(../Content/images/AI-icon.png) center center no-repeat;
+	background-size: .4rem .4rem;
+}
+.sjxx-div{
+	float: left;
+	width:calc(100% - .6rem);
+}
+.sjxx-li-line1{
 	color: #1a8fef;
 	line-height: 1.3em;
 }
-.sjxx-id{
-	float: left;
-	width: .8rem;
-}
 .sjxx-address{
 	color: #ccd4e9;
-	padding-left: .8rem;
 	line-height: 1.2em;
 }
-.sjxx-time>span{ 
-	float:right;
-	width:5em;
-	text-align:right;
+.sjxx-economizetime{
+	margin-right: .5rem;
 }
+.sjxx-time>span{ margin-left: .15rem; }
+
 
 .sjxx-li:hover,
 .sjxx-li.active{
@@ -3779,6 +3784,13 @@ dd.pjc-statistic-star >form{
 	overflow:hidden;
 }
 .center-event-li:first-child{ margin-top: 0; }
+.center-event-li>.sjxx-id{
+	width:1.2rem;
+	height:1.2rem;
+	background-size:.8rem .8rem;
+	background-position:center 55%;
+}
+.center-event-li>.sjxx-div{ width:calc(100% - 1.2rem);}
 .center-event-li-line1{ 
 	color: #1a8fef;
 	line-height: 1.5em;
