modify right layer's event list.

--- a/Lingang.City.Brain/View/SocietyNew/Center_04.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_04.html
@@ -4,7 +4,7 @@
     <button type="button" class="box-close"  onclick="require('s_Echart').closeCenterEventList();"></button>
   </div>
   <div class="center-event-tabbox clearfix" id="center-event-tabsoci">
-    <button type="button" class="center-event-tab active">近三天</button>
+    <button type="button" class="center-event-tab active">当天</button>
     <button type="button" class="center-event-tab">近一周</button>
     <button type="button" class="center-event-tab">近一月</button>
   </div>
