海岸、线工地、街面左二列无视频放图片更新

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
@@ -4,28 +4,28 @@
     <div class="divcont sqzz-wrj-lr1 flex">
         <ul class="sqrk-ul">
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-11.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-11.png"/></div>
                 <div class="item-r">
                     <div class="item-r-name">巡飞次数（架）</div>
                     <div class="item-r-data testAerial" id="worksite_wrj_flightCounts">16</div>
                 </div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-12.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-12.png"/></div>
                 <div class="item-r">
                     <div class="item-r-name">发现事件数（个）</div>
                     <div class="item-r-data testAerial" id="worksite_wrj_eventCounts">16</div>
                 </div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-13.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-13.png"/></div>
                 <div class="item-r">
                     <div class="item-r-name">累计巡飞时间（h）</div>
                     <div class="item-r-data testAerial" id="worksite_wrj_communityCarNums">256</div>
                 </div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-14.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-14.png"/></div>
                 <div class="item-r">
                     <div class="item-r-name">工地巡查面积（㎡）</div>
                     <div class="item-r-data testAerial" id="worksite_wrj_communityGrade">89</div>
@@ -38,8 +38,8 @@
                 <!--<li class="wrj-li"></li>
                 <li class="wrj-li"></li>-->
             </ul>
-            <button type="button" class="arrowbtn btnleft"></button>
-            <button type="button" class="arrowbtn btnright"></button>
+            <!--<button type="button" class="arrowbtn btnleft"></button>
+            <button type="button" class="arrowbtn btnright"></button>-->
         </div>
     </div>
 </div>
