--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
@@ -4,15 +4,15 @@
     <div class="divcont sqzz-wrj-lr1 flex">
         <ul class="sqrk-ul">
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-11.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-11.png"/></div>
                 <div class="item-r"><div class="item-r-name">巡飞数量（架）</div><div class="item-r-data testAerial" id="jm_drone1">16</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-12.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-12.png"/></div>
                 <div class="item-r"><div class="item-r-name">巡飞次数（次）</div><div class="item-r-data testAerial" id="jm_drone2">16</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-13.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-13.png"/></div>
                 <div class="item-r"><div class="item-r-name">巡飞时间（小时）</div><div class="item-r-data testAerial" id="jm_drone3">256</div></div>
             </li>
         </ul>
@@ -22,8 +22,8 @@
                 <!--<li class="wrj-li"></li>
                 <li class="wrj-li"></li>-->
             </ul>
-            <button type="button" class="arrowbtn btnleft"></button>
-            <button type="button" class="arrowbtn btnright"></button>
+            <!--<button type="button" class="arrowbtn btnleft"></button>
+            <button type="button" class="arrowbtn btnright"></button>-->
         </div>
     </div>
 </div>
