--- a/Lingang.City.Brain/View/Industry/Estate/Center_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Center_01.html
@@ -24,12 +24,13 @@
         $(".statistic-slidebtn").each(function () {
             var thisClick = false;
             $(this).click(function () {
-                thisClick = !thisClick;
-                if (thisClick) {
-                    $(this).css({ transform: 'rotate(0)' }).siblings(".statistic-slidediv").slideUp();
-                } else {
-                    $(this).css({ transform: 'rotate(180deg)' }).siblings(".statistic-slidediv").slideDown();
-                }
+                require("mainJsLoad").statisticslidebtn();
+                //thisClick = !thisClick;
+                //if (thisClick) {
+                //    $(this).css({ transform: 'rotate(0)' }).siblings(".statistic-slidediv").slideUp();
+                //} else {
+                //    $(this).css({ transform: 'rotate(180deg)' }).siblings(".statistic-slidediv").slideDown();
+                //}
             })
         })
     })
