大数字收缩按钮中台控制

--- a/Lingang.City.Brain/View/Industry/Estate/Center_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Center_01.html
@@ -21,9 +21,9 @@
 
 <script>
     $(function () {
-        $(".statistic-slidebtn").each(function () {
-            var thisClick = false;
-            $(this).click(function () {
+        //$(".statistic-slidebtn").each(function () {   //$('.statistic-slidebtn').css("transform")
+            //var thisClick = false;
+        $('.statistic-slidebtn').click(function () {
                 require("mainJsLoad").statisticslidebtn();
                 //thisClick = !thisClick;
                 //if (thisClick) {
@@ -32,7 +32,7 @@
                 //    $(this).css({ transform: 'rotate(180deg)' }).siblings(".statistic-slidediv").slideDown();
                 //}
             })
-        })
+        //})
     })
 
 </script>
