--- a/Lingang.City.Brain/View/SocietyNew/Center_01_Info.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_01_Info.html
@@ -18,16 +18,19 @@
 <script>
   
     $(function () {
-        $(".statistic-slidebtn").each(function () {
-            var thisClick = false;
-            $(this).click(function () {
-                thisClick = !thisClick;
-                if (thisClick) {
-                    $(this).css({ transform: 'rotate(0)' }).siblings(".statistic-slidediv").slideUp();
-                } else {
-                    $(this).css({ transform: 'rotate(180deg)' }).siblings(".statistic-slidediv").slideDown();
-                }
-            })
+        //$(".statistic-slidebtn").each(function () {
+        //    var thisClick = false;
+        //    $(this).click(function () {
+        //        thisClick = !thisClick;
+        //        if (thisClick) {
+        //            $(this).css({ transform: 'rotate(0)' }).siblings(".statistic-slidediv").slideUp();
+        //        } else {
+        //            $(this).css({ transform: 'rotate(180deg)' }).siblings(".statistic-slidediv").slideDown();
+        //        }
+        //    })
+        //})
+        $('.statistic-slidebtn').click(function () {
+            require("mainJsLoad").statisticslidebtn();
         })
     })
 
