--- a/Lingang.City.Brain/Views/Shared/_Layout.cshtml
+++ b/Lingang.City.Brain/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/signalR")
     <link href="~/Scripts/Tools/aliplayer/aliplayer-min.css" rel="stylesheet" />
-    <script src="~/Scripts/Tools/vex/js/vex.combined.min.js"></script>
+    <script src="~/Scripts/Tools/vex/js/vex.combined.js"></script>
 </head>
 <body style="padding-top:0px;overflow-y:hidden;overflow-x:hidden;" oncontextmenu="return false" ondragstart="return false">
     @*<div style="height:100%">*@
