--- a/Lingang.City.Brain/View/SocietyNew/Bottom_Menu.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_Menu.html
@@ -8,5 +8,5 @@
     <li class="">街面</li>
     <li class="">网格</li>
     <li class="active">事件</li>
-    <!--<li class="">管网</li>-->
+    <li class="">管网</li>
 </ul>
