招商雷达改为招商简报

--- a/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
@@ -1,22 +1,22 @@
 ﻿<!-- 招商雷达 -->
 <div id="left01_01" class="divbox divbox-ll clearfix  industry-garden-lf1" style="z-index:999;display:block;">
     <h3>
-        <div id="zsld-title">招商雷达</div>
+        <div id="zsld-title">招商简报</div>
     </h3>
     <div class="divcont zsld-cont">
         <div class="chartdiv zsld-chartdiv" style="height: 4rem;">
             <div class="zsld-chart" id="zsld-chart"></div>
             
             <ul class="legend-list zsld-legend-list" id="zsld-legend">
-                <li class="">相关服务产业</li>
-                <li class="">新能源产业</li>
-                <li class="">新能源汽车</li>
-                <li class="">生物产业</li>
-                <li class="">高端装备制造产业</li>
-                <li class="">信息技术产业</li>
-                <li class="">节能环保产业</li>
+                <li class="">重点项目</li>
+                <li class="">新增在谈</li>
+                <li class="">在谈项目</li>
+                <li class="">新增成交</li>
+                <li class="">一般项目</li>
+                <li class="">新增跟踪</li>
+                <!--<li class="">节能环保产业</li>
                 <li class="">数字创意产业</li>
-                <li class="">新材料产业</li>
+                <li class="">新材料产业</li>-->
             </ul>
 
 
