- add section analysis.

--- a/Lingang.City.Brain/Views/BigScreen/Index.cshtml
+++ b/Lingang.City.Brain/Views/BigScreen/Index.cshtml
@@ -28,7 +28,7 @@
 <!--天气和时间-->
 <div class="header-timetemp" id="header_timetemp" style="z-index:999;display:none">
     <span class="real-neight">
-        <button type="button" class="real-scene" >实景</button>
+        <button type="button" class="real-scene" id="real_scene">实景</button>
         <button type="button" class="night-scene active" >夜景</button>
     </span>
     @*<span class="header-temp" id="header_tempimg"><img src="Content/images/weathy_04.png"><span id="header_temp">10°</span></span>*@
