--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -288,7 +288,14 @@ body{
 	background-size: 1.08rem;
 	transform: translate(-50%, -100%);
 }
-
+.navbox > ul > li[dataText].active:before {
+    content: attr(dataText);
+    position:absolute;
+    top:-.8rem;
+    left:50%;
+    white-space:nowrap;
+    transform: translate(-50%, -100%);
+}
 .divbox{
     z-index:999;
 	position: absolute;
