- refine menu name.

--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -3998,7 +3998,7 @@ dd.pjc-statistic-star >form{
 }
 @media screen and (max-width: 4500px) {
     html { font-size: 70px; }
-    /*社区综合*/
+    /*城区综治*/
     .society-lf1 { top:13rem !important;}
     .society-lf2 { top:16.8rem !important;}
     .society-lf3 { top:22rem !important;}
