--- a/Lingang.City.Brain/Views/BigScreen/Index.cshtml
+++ b/Lingang.City.Brain/Views/BigScreen/Index.cshtml
@@ -16,12 +16,12 @@
 <div class="header clearfix" id="header_menu" style="z-index:999;display:none">
     <div class="header-leftmenu">
         <!-- <button class="header-menu">数字星空</button> -->
-        <button class="header-menu active">社区综合</button>
+        <button class="header-menu active">城区综治</button>
         <button class="header-menu">景区管理</button>
         <!-- <button class="header-menu">产业发展</button> -->
     </div>
     <div class="header-rightmenu">
-        <button class="header-menu">产业发展</button>
+        <button class="header-menu">园区产业</button>
     </div>
 </div>
 
