--- a/Lingang.City.Brain/View/Industry/Estate/Bottom_EstateDetail.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Bottom_EstateDetail.html
@@ -1,8 +1,20 @@
-﻿<div class="chanye-poibox1">
+﻿<!--<div class="chanye-poibox1">
+    
+
     <ul class="chanye-poibox1-list">
         <li>面积：<span>41</span>平方米</li>
         <li>企业数：<span>21211</span>家</li>
         <li>异动企业：<span>2</span>家</li>
         <li>战略型新兴企业：<span>3</span>家</li>
+    </ul>
+</div>-->
+
+<div class="yqqy-poibox">
+    <div class="yqqy-poibox-title">园区企业名称</div>
+    <ul>
+        <li><div>面积：</div><span><em>79.83</em>平方公里</span></li>
+        <li><div>企业数：</div><span><em>7425</em>家</span></li>
+        <li><div>异动企业：</div><span><em>736</em>家</span></li>
+        <li><div>战略型新兴企业：</div><span><em>56</em>家</span></li>
     </ul>
 </div>
