产业园区poi详情窗口

--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -4002,7 +4002,7 @@ dd.pjc-statistic-star >form{
 	border-radius: .06em;
 }
 .yqqy-poibox-title{
-	font-size: .34em;
+	font-size: 1.5em;
 	line-height: 1.5em;
 	text-align: center;
 	color: #0ff;
