--- a/Lingang.City.Brain/View/SocietyNew/Center_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_01.html
@@ -6,7 +6,7 @@
             <dl>
                 <dt>案件累计数</dt>
                 <dd class="testAerial"><span id="dsz-ajljs">0</span></dd>
-                <dt>当月案件数</dt>
+                <dt>近30天案件数</dt>
                 <dd class="testAerial"><span id="dsz-dyajs">0</span></dd>
                 <dt>智能派单率</dt>
                 <dd class="testAerial"><span id="dsz-znpds">0</span><span>&#37;</span></dd>
