重叠，产业园区poi和详情窗口跟随

--- a/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
+++ b/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
@@ -17,7 +17,7 @@
                     <option>5 </option>
                     <option>6</option>
                 </select>-->
-                <span class="select-valuespan">层</span>
+                <!--<span class="select-valuespan">层</span>-->
             </li>
             <li class="loudong-li"><div>企业：</div><span><em class="testAerial" id="companyCount_detail">18</em>家</span></li>
             <li class="loudong-li"><div>入住率：</div><span><em class="testAerial" id="occupancyRate_detail">90</em>%</span></li>
