--- a/Lingang.City.Brain/View/TourNew/Right_First_01.html
+++ b/Lingang.City.Brain/View/TourNew/Right_First_01.html
@@ -7,15 +7,6 @@
             <button class="" id="dtrs" onclick="require('t_Home').ryClickEvent('dtrs');">地铁人数统计</button>
             <button class="" id="jccl" onclick="require('t_Home').ryClickEvent('jccl');">进出临港车辆统计</button>
         </div>
-        <!--<div class="jtxx-tabbox clearfix" id="rq">
-            <a class="jtxx-tab active">2月2日</a>
-            <a class="jtxx-tab active">2月3日</a>
-            <a class="jtxx-tab">2月4日</a>
-            <a class="jtxx-tab">2月5日</a>
-            <a class="jtxx-tab">2月6日</a>
-            <a class="jtxx-tab">2月7日</a>
-            <a class="jtxx-tab">2月8日</a>
-        </div>-->
         <div class="rycltj-datebox clearfix">
             <button type="button" class="rycltj-datebtn-pre" id="rycltj-datebtn-pre"><img src="Content/images/rycltj-datebtn.png"/></button>
             <div class="rycltj-datediv flex" id="rq">
@@ -29,10 +20,10 @@
             </div>
             <button type="button" class="rycltj-datebtn-next" id="rycltj-datebtn-next"><img src="Content/images/rycltj-datebtn.png"/></button>
         </div>
-        <div class="chartdiv rycltj-chartdiv">
+        <div class="chartdiv rycltj-chartdiv" style="height:4.8rem;">
             <div class="rycltj-chart" id="rycltj-chart"></div>
             <button class="chartzoomin" onclick="require('t_Home').loadBigChart('Right_First_01')"></button>
-           
+            
         </div>
 
     </div>
