- refine bus detail.

--- a/Lingang.City.Brain/View/TourNew/Center_BusStopDetail.html
+++ b/Lingang.City.Brain/View/TourNew/Center_BusStopDetail.html
@@ -1,7 +1,7 @@
-﻿<div class="poiinfo" id="ul_busStopDetail" style="z-index:999; ">
-    <div class="box-top" id="ul_busStopDetail_name">
-        沪城环路橄榄路
-        <button type="button" class="box-close" onclick="require('t_Home').closeEventDetail()"></button>
+﻿<div class="poiinfo poiinfo3" id="ul_busStopDetail" style="z-index:999; position:absolute; left:50%; top:50%;">
+    <div class="box-top">
+        <div id="ul_busStopDetail_name">沪城环路橄榄路</div>
+        <button type="button" class="box-close" onclick="require('t_Home').closeBusStopDetail()"></button>
     </div>
     <div class="boxcont clearfix">
         <div class="box-rightinfo">
