--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
@@ -6,7 +6,7 @@
         <div class="cy-zhnh flex">
             <div class="cy-zhnh-div">
                 <div class="cy-zhnh-div-title">园区单位面积能耗排行</div>
-                <div class="cy-zhnh-div-listbox">
+                <div class="cy-zhnh-div-listbox scrolldiv" style="height:2.2rem; overflow:hidden;">
                     <ul id="zhnh-unit">
                         <!--<li>1&nbsp;B1栋<span>28150</span></li>
                         <li>2&nbsp;B2栋<span>28050</span></li>
@@ -17,11 +17,11 @@
             <div class="cy-zhnh-div">
                 <div class="cy-zhnh-div-right"  id="zhnh-common">
                     <div class="cy-zhnh-div-title">园区能耗同比分析</div>
-                    <span class="testAerial colorgreen">-3.62%<em></em></span>
+                    <span class="testAerial colorgreen"><i>-3.62%</i><em></em></span>
                 </div>
                 <div class="cy-zhnh-div-right" id="zhnh-chainratio">
                     <div class="cy-zhnh-div-title">园区能耗环比分析</div>
-                    <span class="testAerial colorgreen">-3.62%<em></em></span>
+                    <span class="testAerial colorgreen"><i>-3.62%</i><em></em></span>
                 </div>
             </div>
         </div>
