--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
@@ -6,7 +6,7 @@
         <div class="cy-zhnh flex">
             <div class="cy-zhnh-div">
                 <div class="cy-zhnh-div-title">园区单位面积能耗排行</div>
-                <div class="cy-zhnh-div-listbox scrolldiv" style="height:2.2rem; overflow:hidden;">
+                <div class="cy-zhnh-div-listbox scrolldiv" style="height:1.6rem; line-height:2em; font-size:.28rem; overflow:hidden;">
                     <ul id="zhnh-unit">
                         <!--<li>1&nbsp;B1栋<span>28150</span></li>
                         <li>2&nbsp;B2栋<span>28050</span></li>
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div class="chartdiv zhnh-chartdiv" style="height: 4.3rem; margin-top: .2rem;">
+        <div class="chartdiv zhnh-chartdiv" style="height: 3.8rem; margin-top: .2rem;">
             <div class="zhnh-chart" id="zhnh-chart"></div>
             <button class="chartzoomin" onclick="require('g_Home').loadBigChart('Right_First_02')"></button>
         </div>
