景区事件列表中台控制

--- a/Lingang.City.Brain/View/TourNew/Center_04.html
+++ b/Lingang.City.Brain/View/TourNew/Center_04.html
@@ -1,7 +1,7 @@
 ﻿<div class="center-eventlist" style="z-index:999;">
   <div class="box-top" >
     <span>事件列表</span>
-    <button type="button" class="box-close"  onclick="require('t_Echart').closeCenterEventList();"></button>
+    <button type="button" class="box-close"  onclick="require('t_Home').closeCenterEventList();"></button>
   </div>
   <div class="center-event-tabbox clearfix" id="center-event-tabtour">
     <button type="button" class="center-event-tab active">近三天</button>
