--- a/Lingang.City.Brain/View/TourNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/TourNew/Right_Second_02.html
@@ -89,11 +89,11 @@
                     </div>
                 </li>
                 <li class="yqsj-tabitem">
-                    <!--<div class="flex yqsj-div1" id="sjqytotal">
-                        <div class="">事件类型：<span class="testAerial">7</span>类</div>
+                    <div class="flex yqsj-div1" id="sjqytotal">
+                        <div class="">监控区域：<span class="testAerial">7</span>个</div>
                         <div class="">事件个数：<span class="testAerial">19</span>个</div>
-                    </div>-->
-                    <div class="scrolldiv yqsj-listbox" style="height:100%;">
+                    </div>
+                    <div class="scrolldiv yqsj-listbox">
                         <ul class="yqsj-list" id="sjqyList">
                             <li class="yqsj-item active">
                                 <div class="yqsj-itemdiv"><span>001</span>大客流预警短信（<em class="testAerial">2</em>）</div>
