工地数据请求，详情，园区企业变化趋势展示，战略新兴结构产业隐藏，两者兑换位置，中台人员分布方法注释

--- a/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
@@ -1,21 +1,13 @@
-﻿<!-- 战略新型产业结构 -->
+﻿<!-- 企业变化趋势 -->
 <div   id="right02_01" class="divbox divbox-rr clearfix  industry-estate-rs1" style="z-index:999;display:block;">
     <h3>
-        <div>战略新兴产业结构</div>
+        <div>企业变化趋势</div>
     </h3>
-    <div class="divcont zlxxcyjg-cont" id="zlxxcyjg">
-        <ul class="zlxxcyjg-list zlxxcyjg-list-left">
-            <li class="zlxxcyjg-li" data-text="5.67%">节能环保产业</li>
-            <li class="zlxxcyjg-li" data-text="15.63%">高端装备铸造产业</li>
-            <li class="zlxxcyjg-li" data-text="1.43%">新能源产业</li>
-            <li class="zlxxcyjg-li" data-text="1.52%">数字创意产业</li>
-            <li class="zlxxcyjg-li" data-text="8.01%">新材料产业</li>
-        </ul>
-        <ul class="zlxxcyjg-list zlxxcyjg-list-right">
-            <li class="zlxxcyjg-li" data-text="5.59%">新能源汽车产业</li>
-            <li class="zlxxcyjg-li" data-text="26.16%">新一代信息技术产业</li>
-            <li class="zlxxcyjg-li" data-text="35.38%">生物产业</li>
-            <li class="zlxxcyjg-li" data-text="0.61%">相关服务业</li>
-        </ul>
+    <div class="divcont">
+        <div class="chartdiv qybhqs-chartdiv">
+            <div class="qybhqs-chart" id="qybhqs-chart"></div>
+            <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Left_Second_01')"></button>
+        </div>
     </div>
+   
 </div>
