--- a/Lingang.City.Brain/View/Industry/Estate/Left_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_Second_01.html
@@ -1,12 +1,21 @@
-﻿<!-- 企业变化趋势 -->
+﻿<!-- 战略新型产业结构 -->
 <div id="left02_01" class="divbox divbox-lr clearfix  industry-estate-ls1" style="z-index:999;display:block;">
     <h3>
-        <div>企业变化趋势</div>
+        <div>战略新兴产业结构</div>
     </h3>
-    <div class="divcont">
-        <div class="chartdiv qybhqs-chartdiv">
-            <div class="qybhqs-chart" id="qybhqs-chart"></div>
-            <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Left_Second_01')"></button>
-        </div>
+    <div class="divcont zlxxcyjg-cont" id="zlxxcyjg">
+        <ul class="zlxxcyjg-list zlxxcyjg-list-left">
+            <li class="zlxxcyjg-li" data-text="5.67%">节能环保产业</li>
+            <li class="zlxxcyjg-li" data-text="15.63%">高端装备铸造产业</li>
+            <li class="zlxxcyjg-li" data-text="1.43%">新能源产业</li>
+            <li class="zlxxcyjg-li" data-text="1.52%">数字创意产业</li>
+            <li class="zlxxcyjg-li" data-text="8.01%">新材料产业</li>
+        </ul>
+        <ul class="zlxxcyjg-list zlxxcyjg-list-right">
+            <li class="zlxxcyjg-li" data-text="5.59%">新能源汽车产业</li>
+            <li class="zlxxcyjg-li" data-text="26.16%">新一代信息技术产业</li>
+            <li class="zlxxcyjg-li" data-text="35.38%">生物产业</li>
+            <li class="zlxxcyjg-li" data-text="0.61%">相关服务业</li>
+        </ul>
     </div>
 </div>
