--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
@@ -1,12 +1,12 @@
 ﻿<!-- 无人机 -->
 <div id="left02_02" class="divbox divbox-lr sqzz-wrjgd-lr2 society-ls-worksite2" style="top: 6.2rem;">
-    <h3><div>无人机（当月）</div></h3>
+    <h3><div>无人机（近三月）</div></h3>
     <div class="divcont sqzz-wrj-lr1 flex">
         <ul class="sqrk-ul">
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqzz-lr-11.png"/></div>
                 <div class="item-r">
-                    <div class="item-r-name">巡飞次数（架）</div>
+                    <div class="item-r-name">巡飞次数（次）</div>
                     <div class="item-r-data testAerial" id="worksite_wrj_flightCounts">16</div>
                 </div>
             </li>
@@ -33,10 +33,9 @@
             </li>
         </ul>
         <div class="wrj-left">
-            <ul class="wrj-ul">
-                <li class="wrj-li prism-player"  id="WorkSiteWrjVideo"></li>
-                <!--<li class="wrj-li"></li>
-                <li class="wrj-li"></li>-->
+            <ul class="wrj-ul" id="WorkSiteWrjVideo">
+                <!--<li class="wrj-li prism-player"  id="WorkSiteWrjVideo"></li>-->
+                <!--<li class="wrj-li prism-player" ></li>-->
             </ul>
             <!--<button type="button" class="arrowbtn btnleft"></button>
             <button type="button" class="arrowbtn btnright"></button>-->
