工地无人机轮播图

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
@@ -33,9 +33,8 @@
             </li>
         </ul>
         <div class="wrj-left">
-            <ul class="wrj-ul" id="WorkSiteWrjVideo">
-                <!--<li class="wrj-li prism-player"  id="WorkSiteWrjVideo"></li>-->
-                <!--<li class="wrj-li prism-player" ></li>-->
+            <ul class="wrj-ul" >
+                <li class="wrj-li prism-player"  id="WorkSiteWrjVideo"></li>
             </ul>
             <!--<button type="button" class="arrowbtn btnleft"></button>
             <button type="button" class="arrowbtn btnright"></button>-->
