--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
@@ -9,7 +9,6 @@
     <div class="divcont sqzz-hax-lr1">
         <div class="sqzz-hax-lr1-text">近一次的海岸线巡飞长度(km) <span class="testAerial" id="recent-flight">12,860</span></div>
         <div class="sqzz-hax-lr1-div flex">
-            <div class="sqzz-hax-lr1-pic"></div>
             <div class="wrj-left">
                 <ul class="wrj-ul">
                     <li class="wrj-li prism-player"  id="recentFlyVideo"></li>
@@ -17,12 +16,15 @@
                 <button type="button" class="arrowbtn btnleft"></button>
                 <button type="button" class="arrowbtn btnright"></button>
             </div>
+            <div class="sqzz-hax-lr1-pic">
+                <div class="prism-player" id="monthlyRecentFlyVideo" style="height:100%;"></div>
+            </div>
         </div>
         <ul class="sqzz-hax-lr1-ul flex" id="recent-flight-mess">
-            <li class="sqzz-hax-lr1-li"><button><div>无人机数（架）</div><span class="testAerial">6</span></button></li>
+            <li class="sqzz-hax-lr1-li"><button><div>游客发现数</div><span class="testAerial">6</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>游客劝离率</div><span class="testAerial">89%</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>垃圾发现数</div><span class="testAerial">10</span></button></li>
-            <li class="sqzz-hax-lr1-li"><button><div>乱设摊位数</div><span class="testAerial">0</span></button></li>
+            <li class="sqzz-hax-lr1-li"><button><div>帐篷摊位数</div><span class="testAerial">10</span></button></li>
         </ul>
     </div>
 </div>
