--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard2.html
@@ -12,17 +12,17 @@
             <ul class="sqzz-hax-lr2-ul" id="recent-monthflight">
                 <li><span>近一个月的飞行长度</span><em class="testAerial">12,860</em></li>
                 <li><span>近一个月的飞行次数</span><em class="testAerial">12,860</em></li>
-                <li><span>近一次的海岸线巡飞长度</span><em class="testAerial">12,860</em></li>
+                <li><span>近一个月的飞行时间</span><em class="testAerial">30h</em></li>
             </ul>
-            <div class="sqzz-hax-lr2-pic">
+            <!--<div class="sqzz-hax-lr2-pic">
               <div class="prism-player" id="monthlyRecentFlyVideo" style="height:100%;"></div>
-            </div>
+            </div>-->
         </div>
         <ul class="sqzz-hax-lr1-ul flex" id="recent-monthflight-mess">
-            <li class="sqzz-hax-lr1-li"><button><div>飞行时间</div><span class="testAerial">6</span></button></li>
+            <li class="sqzz-hax-lr1-li"><button><div>游客发现数</div><span class="testAerial">6</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>游客劝离率</div><span class="testAerial">89%</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>垃圾发现数</div><span class="testAerial">10</span></button></li>
-            <li class="sqzz-hax-lr1-li"><button><div>乱设摊位数</div><span class="testAerial">0</span></button></li>
+            <li class="sqzz-hax-lr1-li"><button><div>帐篷摊位数</div><span class="testAerial">10</span></button></li>
         </ul>
     </div>
 </div>
