- change to the value thate passed 3 month .

--- a/Lingang.City.Brain/View/SocietyNew/Center_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_01.html
@@ -4,7 +4,7 @@
     <div class="statistic-slidediv">
         <div class="pjc-statistic">
             <dl>
-                <dt>案件累计数</dt>
+                <dt>近90天案件数</dt>
                 <dd class="testAerial"><span id="dsz-ajljs">0</span></dd>
                 <dt>近30天案件数</dt>
                 <dd class="testAerial"><span id="dsz-dyajs">0</span></dd>
